objects/AcctSeed__Product_Part__c.object
<CustomObject>
    <description>Used to document the relationship between products. The primary use of this record is to create product kits which are used in the Accounting Seed ERP application.</description>
    <fields>
        <fullName>AcctSeed__Inventory_Type__c</fullName>
        <formula>Text( AcctSeed__Product_Part__r.AcctSeed__Inventory_Type__c )</formula>
        <label>Inventory Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Product_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Part</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Parent Product</relationshipLabel>
        <relationshipName>Product_Parts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Parts</relationshipLabel>
        <relationshipName>Product_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>Product Part</label>
    <nameField>
        <displayFormat>PP-{00000}</displayFormat>
        <label>Product Part Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AcctSeed__Product_Is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( AcctSeed__Product__c )</errorConditionFormula>
        <errorDisplayField>AcctSeed__Product__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Product_Part_Is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( AcctSeed__Product_Part__c )</errorConditionFormula>
        <errorDisplayField>AcctSeed__Product_Part__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
</CustomObject>